--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1678,15 +1678,15 @@ input, select, textarea {
 			padding-inline: 1rem;
 		}
 		.project-title {
-			padding-block: .5rem;
+			padding-bottom: .125rem;
 			border-bottom: solid 2px rgba(255, 255, 255, 0.125);
-			margin-bottom: 1rem;
+			margin-bottom: .75rem;
 		}
 		.project img {
 			max-width: 100%;
 		}
 		.project p {
-			margin-bottom: 1.5rem;
+			margin-bottom: 1rem;
 		}
 		.project-body h4 {
 			margin-bottom: .25rem;
